2006-09-21  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Decoupled usecode functions for shapes > 1023 from the shape #. Removed
	  ucfunids.h since it is no longer needed. In UCC, you now must specify
	  the function to be used for a given shape by declaring the function
	  with the 'shape#(n)' construct in its header; for shapes < 1024, you can
	  still get away by declaring it with a normal function # instead. If *no*
	  functions are declared with 'shape#(n)' or if the usecode was compiled with
	  an earlier version of UCC, the old behaviour will be in effect in Exult.
	* New NPCs can now specify a function name as their usecode function. New
	  save games will not work in older versions of Exult, but old saves will
	  still work.
	* Fixed a couple differences in conversation behaviour between Exult and
	  the original games.

2006-09-20  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Working on UCC classes. Added inheritance support, class instantiation in
	  UCC, type checking for class casts, changed method of class creation and
	  deletion and added support for method calls with and without scope
	  resolution operator (to allow calling of overriden inherited functions).
	  Classes can be passed as parameters to functions and be returned by
	  functions, with full type checking; a '0' can be returned as a class
	  return. Methods can also return values now (including classes) but class
	  data members cannot be classes themselves yet.
	  Added static and global static classes and fixed bug preventing the
	  following code from working correctly unless item == npc:
			npc->set_item_frame(1+get_item_frame());
	  Got static arrays working correctly in loops and in setting/retrieving
	  their elements.
	  Possible future enhancements: add a way to set/retrieve class variables
	  from outside a class; maybe allow class data members to be classes.
	* Modified handling of '#' directives in UCC so they don't disrupt the line
	  numbering.