@@ -1,3 +1,14 @@
+2006-09-22  Marzo Sette Torres Junior <marzojr@yahoo.com>
+	* Reduced avatar's speed to prevent outrunning of the teleport storm at the
+	  start of SI. The reulting speed also seems to match the original games
+	  better, as it is now very hard to outrun enemies. The avatar's speed is
+	  also reduced if it is in a (delayed) usecode script, which helps to
+	  prevent outrunning the teleport storm without making the avatar too slow
+	  while in combat mode. Also, switched a few identing spaces to tabs.
+	* Preventing player from moving avatar during the execution of scripts; this
+	  is verified in BG and SI (for example, loom or bellows); delayed scripts do
+	  not seem to hinder movement until they are activated.
+
 2006-09-21  Marzo Sette Torres Junior <marzojr@yahoo.com>
 	* Decoupled usecode functions for shapes > 1023 from the shape #. Removed
 	  ucfunids.h since it is no longer needed. In UCC, you now must specify
@@ -11,7 +22,6 @@
 	  still work.
 	* Fixed a couple differences in conversation behaviour between Exult and
 	  the original games.
-
 2006-09-20  Marzo Sette Torres Junior <marzojr@yahoo.com>
 	* Working on UCC classes. Added inheritance support, class instantiation in
 	  UCC, type checking for class casts, changed method of class creation and
